@@ -1,4 +1,8 @@
 2018-09-14  Martin Sebor  <msebor@redhat.com>
+
+	* gcc.dg/warn-stpcpy-no-nul.c: New test.
+
+2018-09-14  Martin Sebor  <msebor@redhat.com>
 	    Jeff Law  <law@redhat.com>
 
 	* gcc.dg/warn-strcpy-no-nul.c: New test.
